--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@ai4bharat/indic-transliterate": "^1.3.8",
+    "@aws-sdk/client-translate": "^3.830.0",
     "@google/generative-ai": "^0.24.0",
     "@langchain/core": "^0.3.42",
+    "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
