criss helpline recommendation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "langchain": "^0.3.27",
+    "moment": "^2.30.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "node-cache": "^5.1.2",
